debt price heuristics appendix

--- a/data/debt_price_heuristics.ipynb
+++ b/data/debt_price_heuristics.ipynb
@@ -1,6 +1,24 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Appendix - Exploring Debt Price Heuristics\n",
+    "In this document we explore a few alternatives for modelling debt price as a function of the debt market activity. In all cases we assume the existence of a value function at the system level as a function of the total assets and liabilities in the system. We further assume this value to be an invariant. We explore different possible constructs for this value function, all of which take into account the notion of \"debt price\": a sort of \"intrinsic value\" of SAI derived from the activity in the debt system.\n",
+    "\n",
+    "Define:\n",
+    "* Debt price: $\\hat{p}$  \n",
+    "* Value function (\"system level balance sheet\"): $V(\\mathcal{X},\\hat{p})$  \n",
+    "\n",
+    "Assume:\n",
+    "* $\\hat{p}_0 = p^*_0$  \n",
+    "* $V_t=V_0 \\forall t$   \n",
+    "    * $\\implies V(\\mathcal{X}_t,\\hat{p}_t)=V_0$\n",
+    "    * which we can then solve for $\\hat{p}_t$"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -14,28 +32,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Debt Price Heuristic - option 1\n",
+    "# Option 1\n",
     "\n",
-    "Debt price: $\\hat{p}$  \n",
-    "Define a \"system level balance sheet\" $V(\\mathcal{X},\\hat{p})$   \n",
     "* $V(\\mathcal{X},\\hat{p}) = assets - liabilities$  \n",
     "    * $assets = Q\\rho^* + D_1\\hat{p}$  \n",
     "    * $liabilities = D_1\\hat{p} + D_2\\hat{p}$  \n",
     "* $V(\\mathcal{X},\\hat{p}) = Q\\rho^* + D_1\\hat{p} - D_1\\hat{p} - D_2\\hat{p}$  \n",
     "* $V(\\mathcal{X},\\hat{p}) = Q\\rho^* - D_2\\hat{p}$  \n",
-    "\n",
-    "Let's assume $V_{t+1}=V_t$\n",
-    "* $Q_{t+1}\\rho^*_{t+1} - D_{2;t+1}\\hat{p}_{t+1} = Q_{t}\\rho^*_{t} - D_{2;t}\\hat{p}_{t}$\n",
-    "\n",
-    "Solve for $\\hat{p}_{t+1}$\n",
-    "* $D_{2;t+1}\\hat{p}_{t+1} = Q_{t+1}\\rho^*_{t+1} - Q_{t}\\rho^*_{t} + D_{2;t}\\hat{p}_{t}$\n",
-    "* $D_{2;t+1}\\hat{p}_{t+1} = C^*_{t+1} - C^*_{t} + D_{2;t}\\hat{p}_{t}$\n",
-    "* $\\hat{p}_{t+1} = \\frac{C^*_{t+1} - C^*_{t} + D_{2;t}\\hat{p}_{t}}{D_{2;t+1}}$\n",
-    "* $\\hat{p}_{t+1} = \\frac{\\Delta{C^*} + D_{2;t}\\hat{p}_{t}}{D_{2;t+1}}$\n",
-    "\n",
-    "Assume $\\hat{p}_0 = p^*_0$\n",
-    "\n",
-    "For practical purposes (we want to compute $\\hat{p}$ using trivial pandas Series operations), let's reorganize the terms of the equations in a different way\n",
     "* $Q_{t}\\rho^*_{t} - D_{2;t}\\hat{p}_{t} = V_0$\n",
     "* $D_{2;t}\\hat{p}_{t} = Q_{t}\\rho^*_{t} - V_0$\n",
     "* $\\hat{p}_{t} = \\frac{Q_{t}\\rho^*_{t} - V_0}{D_{2;t}}$"
@@ -87,23 +90,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Debt Price Heuristic - option 2\n",
+    "# Option 2\n",
     "\n",
-    "Debt price: $\\hat{p}$  \n",
-    "Define a \"system level balance sheet\" $V(\\mathcal{X},\\hat{p})$   \n",
-    "\n",
-    "$V(\\mathcal{X},\\hat{p})$   \n",
     "* $V(\\mathcal{X},\\hat{p}) = assets - liabilities$  \n",
     "    * $assets = Q\\rho^* + D_1\\hat{p}$  \n",
     "    * $liabilities = D_1 p^* + D_2p^*$  \n",
     "* $V(\\mathcal{X},\\hat{p}) = Q\\rho^* + D_1 (\\hat p - p^*) - D_2p^*$  \n",
-    "\n",
-    "Zargham's comment: while this turns out to be a bit more complex, one thing i like about it is that it results in a debt price described as a correction to the redemption price, which i think will help when we look to apply the model \\[beyond\\] the DAI system.\n",
-    "\n",
-    "Let's assume $\\hat{p}_0 = p^*_0$ and $V_t=V_0 \\forall t$   \n",
-    "* $V_t = Q_{t}\\rho_{t}^* + D_{1; t} (\\hat p_{t} - p_{t}^*) - D_{2:t}p^*_{t}=V_0$\n",
-    "\n",
-    "Solve for $\\hat p_{t}$  \n",
     "* $Q_{t}\\rho_{t}^* + D_{1; t} (\\hat p_{t} - p_{t}^*) - D_{2:t}p^*_{t}=V_0$\n",
     "* $D_{1; t} (\\hat p_{t} - p_{t}^*) = V_0 - Q_{t}\\rho_{t}^* + D_{2:t}p^*_{t+1}$\n",
     "* $\\hat p_{t} - p_{t}^* = \\frac{V_0 - Q_{t}\\rho_{t}^* + D_{2:t}p^*_{t}}{D_{1; t}}$\n",
@@ -158,21 +150,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Debt Price Heuristic - option 3\n",
+    "# Option 3\n",
     "\n",
-    "Debt price: $\\hat{p}$  \n",
-    "Define a \"system level balance sheet\" $V(\\mathcal{X},\\hat{p})$   \n",
-    "\n",
-    "$V(\\mathcal{X},\\hat{p})$   \n",
     "* $V(\\mathcal{X},\\hat{p}) = assets - liabilities$  \n",
     "    * $assets = Q\\rho^* + D_1p^*$  \n",
     "    * $liabilities = D_1 \\hat{p} + D_2\\hat{p}$  \n",
     "* $V(\\mathcal{X},\\hat{p}) = Q\\rho^* + D_1 (p^* - \\hat{p}) - D_2\\hat{p}$  \n",
-    "\n",
-    "Let's assume $\\hat{p}_0 = p^*_0$ and $V_t=V_0 \\forall t$   \n",
-    "* $V_t = Q_t\\rho^*_t + D_{1;t} (p^*_t - \\hat{p}_t) - D_{2;t}\\hat{p}_t = V_0$  \n",
-    "\n",
-    "Solve for $\\hat{p}_t$\n",
     "* $Q_t\\rho^*_t + D_{1;t} (p^*_t - \\hat{p}_t) - D_{2;t}\\hat{p}_t = V_0$\n",
     "* $Q_t\\rho^*_t + D_{1;t} p^*_t - V_0 = (D_{1;t} + D_{2;t})\\hat{p}_t$\n",
     "* $\\hat{p}_t = \\frac{Q_t\\rho^*_t + D_{1;t} p^*_t - V_0}{D_{1;t} + D_{2;t}}$"
@@ -226,22 +209,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Debt Price Heuristic - option 4\n",
+    "# Option 4\n",
     "\n",
-    "Debt price: $\\hat{p}$  \n",
-    "Define a \"system level balance sheet\" $V(\\mathcal{X},\\hat{p})$   \n",
-    "\n",
-    "$V(\\mathcal{X},\\hat{p})$   \n",
     "* $V(\\mathcal{X},\\hat{p}) = \\frac{liabilities}{assets}$  \n",
     "    * $assets = Q \\rho^* + D_1 \\hat{p}$  \n",
     "    * $liabilities = D_1 \\hat{p} + D_2 \\hat{p}$  \n",
     "* $V(\\mathcal{X},\\hat{p}) = \\frac{D_1 \\hat{p} + D_2 \\hat{p}}{Q \\rho^* + D_1 \\hat{p}}$  \n",
-    "\n",
-    "Let's assume $\\hat{p}_0 = p^*_0$ and $V_t=V_0 \\forall t$   \n",
-    "* $V_t = \\frac{D_{1;t} \\hat{p}_t + D_{2;t} \\hat{p}_t}{Q_t \\rho^*_t + D_{1;t} \\hat{p}_t} = V_0$   \n",
-    "\n",
-    "\n",
-    "Solve for $\\hat{p}_t$\n",
     "* $D_{1;t} \\hat{p}_t + D_{2;t} \\hat{p}_t = V_0 Q_t \\rho^*_t + V_0 D_{1;t} \\hat{p}_t$\n",
     "* $D_{1;t} \\hat{p}_t + D_{2;t} \\hat{p}_t - V_0 D_{1;t} \\hat{p}_t = V_0 Q_t \\rho^*_t $\n",
     "* $(D_{1;t} + D_{2;t} - V_0 D_{1;t}) \\hat{p}_t = V_0 Q_t \\rho^*_t $\n",
@@ -296,22 +269,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Debt Price Heuristic - option 5\n",
+    "# Option 5\n",
     "\n",
-    "Debt price: $\\hat{p}$  \n",
-    "Define a \"system level balance sheet\" $V(\\mathcal{X},\\hat{p})$   \n",
-    "\n",
-    "$V(\\mathcal{X},\\hat{p})$   \n",
     "* $V(\\mathcal{X},\\hat{p}) = \\frac{liabilities}{assets}$  \n",
     "    * $assets = Q \\rho^* + D_1 p^*$  \n",
     "    * $liabilities = D_1 \\hat{p} + D_2 \\hat{p}$  \n",
     "* $V(\\mathcal{X},\\hat{p}) = \\frac{D_1 \\hat{p} + D_2 \\hat{p}}{Q \\rho^* + D_1 p^*}$  \n",
-    "\n",
-    "Let's assume $\\hat{p}_0 = p^*_0$ and $V_t=V_0 \\forall t$   \n",
-    "* $V_t = \\frac{D_{1;t} \\hat{p}_t + D_{2;t} \\hat{p}_t}{Q_t \\rho^*_t + D_{1;t} p^*_t} = V_0$   \n",
-    "\n",
-    "\n",
-    "Solve for $\\hat{p}_t$\n",
     "* $D_{1;t} \\hat{p}_t + D_{2;t} \\hat{p}_t = V_0 (Q_t \\rho^*_t + D_{1;t} p^*_t)$\n",
     "* $ \\hat{p}_t = \\frac{V_0 (Q_t \\rho^*_t + D_{1;t} p^*_t)}{D_{1;t} + D_{2;t}}$"
    ]
