--- a/market_model/1_market_model.ipynb
+++ b/market_model/1_market_model.ipynb
@@ -77,7 +77,7 @@
     "    * Wipe $u_2$: $S_{k+1} = S_k - u_2$\n",
     "\n",
     "The complete system can be represented as a stocks and flows diagram  \n",
-    "![image](https://app.lucidchart.com/publicSegments/view/9c7ee11c-59cf-4133-9480-bc8a5449a2c4/image.png)\n",
+    "![image](SCD_stocks_and_flows.png)\n",
     "\n",
     "We highlight that in this model of the system some concepts are not defined in the exact same way as the Maker implementation. Notably, Maker does not directly keep track of $D_2$. Instead, when a repayment occurs the borrower defines $u_2$ and the system computes a corresponding $w_2$ to be paid in addition to that (the medium of exchange for $w_2$ is MKR tokens)\n",
     "* Wipe $u_2$\n",
@@ -95,7 +95,7 @@
     "2. Daily supply of SAI, mints and burns\n",
     "\n",
     "If we assume that the liquidation process of all CDPs finalize on the same day they are triggered, we can work with a simplified version of the previous stocks and flows diagram:\n",
-    "![image](https://app.lucidchart.com/publicSegments/view/104d6877-b1c0-4700-b91f-50aa1f7092e7/image.png)\n",
+    "![image](SCD_simplified.png)\n",
     "\n",
     "Under the previous assumption, the Bloxy data provides us with direct access to:\n",
     "* $Q$: WETH locked\n",
@@ -131,7 +131,7 @@
     "import pandas as pd\n",
     "\n",
     "# read Bloxy data on ETH locked in Maker, rename columns to match our equations\n",
-    "bloxy_eth_df = pd.read_csv('raw_files/dai_weth.csv')\n",
+    "bloxy_eth_df = pd.read_csv('../data/raw_files/dai_weth.csv')\n",
     "bloxy_eth_df.set_index(pd.to_datetime(bloxy_eth_df['__timestamp']).dt.date, \n",
     "                    verify_integrity=True,\n",
     "                    inplace=True,\n",
@@ -144,7 +144,7 @@
     "bloxy_eth_df.drop(columns=original_columns, inplace=True)\n",
     "\n",
     "# read Bloxy data on SAI supply, rename columns to match our equations\n",
-    "bloxy_sai_df = pd.read_csv('raw_files/dai_minted_burnt.csv')\n",
+    "bloxy_sai_df = pd.read_csv('../data/raw_files/dai_minted_burnt.csv')\n",
     "bloxy_sai_df.set_index(pd.to_datetime(bloxy_sai_df['__timestamp']).dt.date, \n",
     "                    verify_integrity=True,\n",
     "                    inplace=True,\n",
@@ -156,7 +156,7 @@
     "bloxy_sai_df.drop(columns=original_columns, inplace=True)\n",
     "\n",
     "# read Dune query for CDPs wipes/shuts, rename columns to match our equations\n",
-    "dune_df = pd.read_json('raw_files/dune_data.json')\n",
+    "dune_df = pd.read_json('../data/raw_files/dune_data.json')\n",
     "dune_df.set_index(pd.to_datetime(dune_df['date_trunc']).dt.date, \n",
     "                          verify_integrity=True,\n",
     "                          inplace=True                          \n",
@@ -167,7 +167,7 @@
     "dune_df.drop(columns=original_columns, inplace=True)\n",
     "\n",
     "# read CSV provided by the client, rename columns to match our equations\n",
-    "reflexer_df = pd.read_csv('raw_files/DAIETH_data.csv', usecols=['date','ETH Price', 'Stability Fee', 'DAI Price'])\n",
+    "reflexer_df = pd.read_csv('../data/raw_files/DAIETH_data.csv', usecols=['date','ETH Price', 'Stability Fee', 'DAI Price'])\n",
     "reflexer_df.set_index(pd.to_datetime(reflexer_df['date']).dt.date, \n",
     "                    verify_integrity=True,\n",
     "                    inplace=True,\n",
@@ -240,7 +240,7 @@
     "    return a\n",
     "debt_price_df['p_ema_10'] = pd.Series(ExpMovingAverage(debt_price_df['p'], 10), index=debt_price_df.index)\n",
     "\n",
-    "debt_price_df.to_csv('debt_price_df.csv')"
+    "debt_price_df.to_csv('debt_market_df.csv')"
    ]
   },
   {
