--- a/market_model/2_debt_price_heuristics.ipynb
+++ b/market_model/2_debt_price_heuristics.ipynb
@@ -20,12 +20,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "debt_price_df = pd.read_csv('debt_price_df.csv')"
+    "debt_market_df = pd.read_csv('debt_market_df.csv')"
    ]
   },
   {
@@ -46,16 +46,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x11eed8210>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x11970ea50>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -73,17 +73,17 @@
     }
    ],
    "source": [
-    "p_star_0 = debt_price_df.iloc[0]['p_star']\n",
+    "p_star_0 = debt_market_df.iloc[0]['p_star']\n",
     "p_hat_0 = p_star_0\n",
-    "C_star_0 = debt_price_df.iloc[0]['C_star']\n",
-    "D_1_0 = debt_price_df.iloc[0]['D_1']\n",
-    "D_2_0 = debt_price_df.iloc[0]['D_2']\n",
+    "C_star_0 = debt_market_df.iloc[0]['C_star']\n",
+    "D_1_0 = debt_market_df.iloc[0]['D_1']\n",
+    "D_2_0 = debt_market_df.iloc[0]['D_2']\n",
     "V_0 = C_star_0 - D_2_0 * p_hat_0\n",
     "\n",
-    "C_star = debt_price_df['C_star']\n",
-    "D_2 = debt_price_df['D_2']\n",
-    "debt_price_df['p_hat_1'] = (C_star - V_0) / D_2\n",
-    "debt_price_df.plot(y='p_hat_1', logy=True, figsize=(15,5), grid=True)"
+    "C_star = debt_market_df['C_star']\n",
+    "D_2 = debt_market_df['D_2']\n",
+    "debt_market_df['p_hat_1'] = (C_star - V_0) / D_2\n",
+    "debt_market_df.plot(y='p_hat_1', logy=True, figsize=(15,5), grid=True)"
    ]
   },
   {
@@ -104,16 +104,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x11dcdee50>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x119c24b50>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -131,19 +131,19 @@
     }
    ],
    "source": [
-    "p_star_0 = debt_price_df.iloc[0]['p_star']\n",
+    "p_star_0 = debt_market_df.iloc[0]['p_star']\n",
     "p_hat_0 = p_star_0\n",
-    "C_star_0 = debt_price_df.iloc[0]['C_star']\n",
-    "D_1_0 = debt_price_df.iloc[0]['D_1']\n",
-    "D_2_0 = debt_price_df.iloc[0]['D_2']\n",
+    "C_star_0 = debt_market_df.iloc[0]['C_star']\n",
+    "D_1_0 = debt_market_df.iloc[0]['D_1']\n",
+    "D_2_0 = debt_market_df.iloc[0]['D_2']\n",
     "V_0 = C_star_0 + D_1_0 * (p_hat_0 - p_star_0) - D_2_0 * p_star_0\n",
     "\n",
-    "p_star = debt_price_df['p_star']\n",
-    "C_star = debt_price_df['C_star']\n",
-    "D_1 = debt_price_df['D_1']\n",
-    "D_2 = debt_price_df['D_2']\n",
-    "debt_price_df['p_hat_2'] = (V_0 - C_star + D_2 * p_star) / D_1 + p_star\n",
-    "debt_price_df.plot(y='p_hat_2', figsize=(15,5), grid=True)"
+    "p_star = debt_market_df['p_star']\n",
+    "C_star = debt_market_df['C_star']\n",
+    "D_1 = debt_market_df['D_1']\n",
+    "D_2 = debt_market_df['D_2']\n",
+    "debt_market_df['p_hat_2'] = (V_0 - C_star + D_2 * p_star) / D_1 + p_star\n",
+    "debt_market_df.plot(y='p_hat_2', figsize=(15,5), grid=True)"
    ]
   },
   {
@@ -163,16 +163,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x11dc4bd10>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x119b81a50>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -190,19 +190,19 @@
     }
    ],
    "source": [
-    "p_star_0 = debt_price_df.iloc[0]['p_star']\n",
+    "p_star_0 = debt_market_df.iloc[0]['p_star']\n",
     "p_hat_0 = p_star_0\n",
-    "C_star_0 = debt_price_df.iloc[0]['C_star']\n",
-    "D_1_0 = debt_price_df.iloc[0]['D_1']\n",
-    "D_2_0 = debt_price_df.iloc[0]['D_2']\n",
+    "C_star_0 = debt_market_df.iloc[0]['C_star']\n",
+    "D_1_0 = debt_market_df.iloc[0]['D_1']\n",
+    "D_2_0 = debt_market_df.iloc[0]['D_2']\n",
     "V_0 = C_star_0 + D_1_0 * (p_hat_0 - p_star_0) - D_2_0 * p_star_0\n",
     "\n",
-    "p_star = debt_price_df['p_star']\n",
-    "C_star = debt_price_df['C_star']\n",
-    "D_1 = debt_price_df['D_1']\n",
-    "D_2 = debt_price_df['D_2']\n",
-    "debt_price_df['p_hat_3'] = (C_star + D_1 * p_star - V_0) / (D_1 + D_2)\n",
-    "debt_price_df.plot(y='p_hat_3', figsize=(15,5), grid=True)"
+    "p_star = debt_market_df['p_star']\n",
+    "C_star = debt_market_df['C_star']\n",
+    "D_1 = debt_market_df['D_1']\n",
+    "D_2 = debt_market_df['D_2']\n",
+    "debt_market_df['p_hat_3'] = (C_star + D_1 * p_star - V_0) / (D_1 + D_2)\n",
+    "debt_market_df.plot(y='p_hat_3', figsize=(15,5), grid=True)"
    ]
   },
   {
@@ -223,16 +223,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x11d8a6110>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x119c44450>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -250,19 +250,19 @@
     }
    ],
    "source": [
-    "p_star_0 = debt_price_df.iloc[0]['p_star']\n",
+    "p_star_0 = debt_market_df.iloc[0]['p_star']\n",
     "p_hat_0 = p_star_0\n",
-    "C_star_0 = debt_price_df.iloc[0]['C_star']\n",
-    "D_1_0 = debt_price_df.iloc[0]['D_1']\n",
-    "D_2_0 = debt_price_df.iloc[0]['D_2']\n",
+    "C_star_0 = debt_market_df.iloc[0]['C_star']\n",
+    "D_1_0 = debt_market_df.iloc[0]['D_1']\n",
+    "D_2_0 = debt_market_df.iloc[0]['D_2']\n",
     "V_0 = (D_1_0 * p_hat_0 + D_2_0 * p_hat_0) / (C_star_0 + D_1_0 * p_hat_0)\n",
     "\n",
-    "p_star = debt_price_df['p_star']\n",
-    "C_star = debt_price_df['C_star']\n",
-    "D_1 = debt_price_df['D_1']\n",
-    "D_2 = debt_price_df['D_2']\n",
-    "debt_price_df['p_hat_4'] = C_star * V_0 / (D_1 + D_2 - V_0 * D_1)\n",
-    "debt_price_df.plot(y='p_hat_4', figsize=(15,5), grid=True)"
+    "p_star = debt_market_df['p_star']\n",
+    "C_star = debt_market_df['C_star']\n",
+    "D_1 = debt_market_df['D_1']\n",
+    "D_2 = debt_market_df['D_2']\n",
+    "debt_market_df['p_hat_4'] = C_star * V_0 / (D_1 + D_2 - V_0 * D_1)\n",
+    "debt_market_df.plot(y='p_hat_4', figsize=(15,5), grid=True)"
    ]
   },
   {
@@ -281,16 +281,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x11d163cd0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x11885fbd0>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -308,33 +308,33 @@
     }
    ],
    "source": [
-    "p_star_0 = debt_price_df.iloc[0]['p_star']\n",
+    "p_star_0 = debt_market_df.iloc[0]['p_star']\n",
     "p_hat_0 = p_star_0\n",
-    "C_star_0 = debt_price_df.iloc[0]['C_star']\n",
-    "D_1_0 = debt_price_df.iloc[0]['D_1']\n",
-    "D_2_0 = debt_price_df.iloc[0]['D_2']\n",
+    "C_star_0 = debt_market_df.iloc[0]['C_star']\n",
+    "D_1_0 = debt_market_df.iloc[0]['D_1']\n",
+    "D_2_0 = debt_market_df.iloc[0]['D_2']\n",
     "V_0 = (D_1_0 * p_hat_0 + D_2_0 * p_hat_0) / (C_star_0 + D_1_0 * p_star_0)\n",
     "\n",
-    "p_star = debt_price_df['p_star']\n",
-    "C_star = debt_price_df['C_star']\n",
-    "D_1 = debt_price_df['D_1']\n",
-    "D_2 = debt_price_df['D_2']\n",
-    "debt_price_df['p_hat_5'] = V_0 * (C_star + D_1 * p_star) / (D_1 + D_2)\n",
-    "debt_price_df.plot(y='p_hat_5', figsize=(15,5), grid=True)"
+    "p_star = debt_market_df['p_star']\n",
+    "C_star = debt_market_df['C_star']\n",
+    "D_1 = debt_market_df['D_1']\n",
+    "D_2 = debt_market_df['D_2']\n",
+    "debt_market_df['p_hat_5'] = V_0 * (C_star + D_1 * p_star) / (D_1 + D_2)\n",
+    "debt_market_df.plot(y='p_hat_5', figsize=(15,5), grid=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x11e0f5f50>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x118b9b1d0>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -355,12 +355,12 @@
     "import matplotlib.pyplot as plt\n",
     "fig, axs = plt.subplots(4, 1, figsize=(15,10))\n",
     "\n",
-    "debt_price_df.plot(y=['p', 'p_ema_10', 'p_star'], ax=axs[0], grid=True)\n",
-    "debt_price_df.plot(y=['p_hat_1'], logy=True, ax=axs[1], grid=True)\n",
-    "debt_price_df.plot(y=['p_hat_2'], ax=axs[2], grid=True)\n",
-    "debt_price_df.plot(y=['p_hat_3'], ax=axs[2], grid=True)\n",
-    "debt_price_df.plot(y=['p_hat_4'], ax=axs[3], grid=True)\n",
-    "debt_price_df.plot(y=['p_hat_5'], ax=axs[3], grid=True)"
+    "debt_market_df.plot(y=['p', 'p_ema_10', 'p_star'], ax=axs[0], grid=True)\n",
+    "debt_market_df.plot(y=['p_hat_1'], logy=True, ax=axs[1], grid=True)\n",
+    "debt_market_df.plot(y=['p_hat_2'], ax=axs[2], grid=True)\n",
+    "debt_market_df.plot(y=['p_hat_3'], ax=axs[2], grid=True)\n",
+    "debt_market_df.plot(y=['p_hat_4'], ax=axs[3], grid=True)\n",
+    "debt_market_df.plot(y=['p_hat_5'], ax=axs[3], grid=True)"
    ]
   }
  ],
