add MD description to ml_methods notebook

--- a/market_model/3_debt_price_ml_methods.ipynb
+++ b/market_model/3_debt_price_ml_methods.ipynb
@@ -1,6 +1,44 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Appendix - Machine Learned Debt Price Model\n",
+    "In this document we explore using machine learning methods to model the debt price. \n",
+    "\n",
+    "We approximate the debt price as the 10-days exponential moving average (EMA) of the market price. We then use activity data from Single Collateral DAI to fit a regression model that accurately predicts the debt price from the following feature set:\n",
+    "* $Q$: WETH locked in Maker\n",
+    "* $v_1$: daily WETH deposited\n",
+    "* $v_2+v_3$: daily WETH withdrawn\n",
+    "* $D_1$: SAI supply / total principal debt\n",
+    "* $u_1$: daily SAI minted / new debt taken out\n",
+    "* $u_2$: daily principal debt paid back\n",
+    "* $u_3$: daily principal debt liquidated\n",
+    "* $u_2+u_3$: daily SAI burned\n",
+    "* $D_2$: interest component of total debt\n",
+    "* $w_1$: daily interest accrued\n",
+    "* $w_2$: daily interest paid back\n",
+    "* $w_3$: daily interest waived\n",
+    "* $w_2+w_3$: daily decrease in interest component of total debt\n",
+    "* $D = D_1 + D_2$: total debt in the system\n",
+    "* $\\beta$: stability fee\n",
+    "* $\\rho^*$: price of ETH in USD\n",
+    "* $C^* = Q  \\rho^*$: total value locked in Maker\n",
+    "\n",
+    "For efficiency, we use the [AutoSklearn](http://papers.nips.cc/paper/5872-efficient-and-robust-automated-machine-learning.pdf) package to train the regressor. AutoSklearn is an automated machine learning system based on scikit-learn which leverages Bayesian optimization, meta-learning and ensemble construction to automatically select a combination of ML algorithms and tune their hyperparameters. A more traditional approach could be explored in future iterations of this project to increase transparency and control over the model.\n",
+    "\n",
+    "Other iterations of this approach can be found in previous commits of this notebook. In them we explored:\n",
+    "* defining the debt price as equal to the market price instead of its 10-days EMA\n",
+    "* different test sample sizes\n",
+    "* holdout and cross validation as resampling strategies\n",
+    "\n",
+    "The decision to use the 10-days EMA as a proxy for the debt price was made based on the notion that the debt price being a more intrinsic value it should be less noisy than the market price.\n",
+    "\n",
+    "Different test sample sizes and resampling strategies had similar results, and we settled for a 66/33 training/test split and a 5-fold cross validation strategy."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -150,6 +188,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As can be seen in the output of the fitting process, 57 algorithms were run, with an ensemble of 6 of them resulting in the best validation score $R^2=0.91$. A similar score was obtained in the testing data ($R^2=0.92$). The following plot shows the 10-days EMA of the market price (blue) and the values predicted by the model (orange)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
@@ -182,6 +227,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finally, we store the model to a file so that it can be used in a cadCAD model in the next steps of the project and verify the consistency of the model loaded from the file against the original."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -209,25 +261,6 @@
     "data_to_predict = debt_market_df[features]\n",
     "loaded_model_predictions = loaded_model.predict(data_to_predict)\n",
     "print(f'Prediction by the model loaded from file matches original: {(full_prediction==loaded_model_predictions).all()}')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "autoreg_df = debt_market_df[['p', 'p_star']].copy()\n",
-    "autoreg_df['p_hat'] = full_prediction\n",
-    "autoreg_df['e_hat'] = autoreg_df['p_hat'] - autoreg_df['p']\n",
-    "autoreg_df['e_star'] = autoreg_df['p_star'] - autoreg_df['p']\n",
-    "autoreg_df['cumsum_e_hat'] = autoreg_df['e_hat'].cumsum()\n",
-    "autoreg_df['cumsum_e_star'] = autoreg_df['e_star'].cumsum()\n",
-    "autoreg_df['delta_e_hat'] = autoreg_df['e_hat'].diff().fillna(autoreg_df['e_hat'])\n",
-    "autoreg_df['delta_e_star'] = autoreg_df['e_star'].diff().fillna(autoreg_df['e_star'])\n",
-    "autoreg_df['y'] = autoreg_df['p'].shift(-1)\n",
-    "autoreg_df.dropna(inplace=True)\n",
-    "autoreg_df.to_csv('market_price_autoregression_df.csv')"
    ]
   }
  ],
